fix: change organization name

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://orange-opensource.github.io/PowerDNS-Operator-helm-chart/docs/index.html">
+<meta http-equiv="refresh"
+    content="0; url=https://powerdns-operator.github.io/PowerDNS-Operator-helm-chart/docs/index.html">
